--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,7 @@ cmake_minimum_required(VERSION 2.8)
 set(CMAKE_CXX_STANDARD 11)
 
 add_subdirectory(face)
+
+add_executable(frks main.cpp)
+
+target_link_libraries(frks face)
